[build-system]
build-backend = "hatchling.build"

requires = [ "hatch-vcs", "hatchling>=1.27" ]

[project]
name = "neural-lam"
description = "LAM-based data-driven forecasting"
readme = "README.md"
license = { text = "MIT" }

authors = [
  { name = "Joel Oskarsson", email = "joel.oskarsson@outlook.com" },
  { name = "Simon Adamov", email = "Simon.Adamov@meteoswiss.ch" },
  { name = "Leif Denby", email = "lcd@dmi.dk" },
  { name = "Simon Kamuk Christiansen", email = "skc@dmi.dk" },
  { name = "Kasper Hintz", email = "kah@dmi.dk" },
  { name = "Erik Larsson", email = "erik.larsson@liu.se" },
  { name = "Hauke Schulz", email = "has@dmi.dk" },
  { name = "Daniel Holmberg", email = "daniel.holmberg@helsinki.fi" },
]
requires-python = ">=3.10"

classifiers = [
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dynamic = [ "version" ]
# PEP 621 project metadata
# See https://www.python.org/dev/peps/pep-0621/
dependencies = [
  "boto3>=1.35.32",
  "cartopy>=0.22",
  "dataclass-wizard<0.31",
  "matplotlib>=3.7",
  "mlflow>=2.16.2",
  "mllam-data-prep>=0.5",
  "networkx>=3",
  "numpy>=1.24.2",
  "nvidia-ml-py>=13.580.82",
  "parse>=1.20.2",
  "plotly>=5.15",
  "pyproj>=3.4.1",
  "pytorch-lightning>=2.0.3",
  "scipy>=1.10",
  "shapely>=2.0.1",
  "torch>=2.3",
  "torch-geometric==2.3.1",
  "tueplots>=0.0.8",
  "wandb>=0.13.10",
]

[dependency-groups]
dev = [ "pooch>=1.8.2", "pre-commit>=3.8", "pytest>=8.3.2" ]

[tool.hatch.metadata]
core-metadata-version = "2.4"

[tool.hatch.version]
source = "vcs"
fallback-version = "0.0.0"

[tool.hatch.build.targets.sdist]
exclude = [
  ".venv/",
  "venv/",
]

[tool.hatch.build.targets.wheel]
exclude = [
  ".venv/",
  "venv/",
]

[tool.ruff]
target-version = "py310"
line-length = 80
# Avoid notebook churn from lint-only modernization.
extend-exclude = [ "docs/notebooks/*.ipynb" ]

lint.select = [ "E", "F", "G", "I", "PT", "PTH", "S", "TCH", "UP", "W" ]
lint.ignore = [
  "E203",   # Keep Black-compatible whitespace behaviour
  "PT006",  # Existing parameterize style to be tightened incrementally
  "PT007",  # Existing parameterize value style to be tightened incrementally
  "PTH103", # pathlib migration will be done incrementally
  "PTH118", # pathlib migration will be done incrementally
  "S101",   # Allow assert usage for now (extensive in tests and checks)
  "S311",   # Pseudo-random usage is non-cryptographic in this codebase
  "S603",   # subprocess calls are currently intentional and reviewed manually
  "S607",   # Allow partial executable paths in controlled environments
  "UP006",  # Typing modernization deferred to follow-up cleanup
  "UP007",  # Typing modernization deferred to follow-up cleanup
  "UP022",  # Redirect modernisation deferred to follow-up cleanup
  "UP035",  # Deprecated import migration deferred to follow-up cleanup
  "UP045",  # Optional/Union modernization deferred to follow-up cleanup
]
lint.per-file-ignores."__init__.py" = [ "F401" ]

[tool.pylint]
ignore = [
  "create_mesh.py", # Disable linting for now, as major rework is planned/expected
]
# Temporary fix for import neural_lam statements until set up as proper package
init-hook = 'import sys; sys.path.append(".")'
[tool.pylint.TYPECHECK]
generated-members = [ "numpy.*", "torch.*" ]
[tool.pylint.'MESSAGES CONTROL']
disable = [
  "C0114", # 'missing-module-docstring', Do not require module docstrings
  "R0901", # 'too-many-ancestors', Allow many layers of sub-classing
  "R0902", # 'too-many-instance-attribtes', Allow many attributes
  "R0913", # 'too-many-arguments', Allow many function arguments
  "R0914", # 'too-many-locals', Allow many local variables
  "W0223", # 'abstract-method', Subclasses do not have to override all abstract methods
]
[tool.pylint.DESIGN]
max-statements = 100 # Allow for some more involved functions
[tool.pylint.IMPORTS]
allow-any-import-level = "neural_lam"
[tool.pylint.SIMILARITIES]
min-similarity-lines = 10

[tool.codespell]
skip = "requirements/*"

# Pylint config
